--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    padding: 20px;
 }
 
 h3, h4 {
@@ -11,6 +11,24 @@ h3, h4 {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+#upperBoxRed {
+    width: 100%;
+    height: 50px; 
+    background-color: #b81616;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#upperBoxGrey {
+    width: 100%;
+    height: 12px; 
+    background-color: #909090;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .form-group {
@@ -51,15 +69,15 @@ h3, h4 {
 .btn {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #b81616;
+    background-color: #909090;
     color: #fff;
     border: none;
     cursor: pointer;
-    
 }
 
 .btn:hover {
-    background-color: #218838;
+    background-color: #b81616;
+    transition: all 0.5s;
 }
 
 img {
