Padronizações, implementação em inglês

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
     <div class="container">
         <div id="title">Minerva</div>
         <div>
-            <a href="inserir_info_pt.html"><button class="btn_title">Português</button></a>
-            <a href="inserir_info_en.html"><button class="btn_title">English</button></a>
+            <a href="inserir_info_pt"><button class="btn_title">Português</button></a>
+            <a href="inserir_info_en"><button class="btn_title">English</button></a>
         </div>
     </div>
 </body>
