--- a/templates/inserir_info_pt.html
+++ b/templates/inserir_info_pt.html
@@ -17,7 +17,7 @@
 <br>
 
 <form id="form" enctype="multipart/form-data">
-    <button type="button" class="btn" onclick="window.location.href='index.html'">←</button>
+    <button type="button" class="btn" onclick="window.location.href='index'">←</button>
 
     <div class="container">
         <h3>Informações da Máquina</h3>
@@ -30,7 +30,7 @@
         <div class="form-group">
             <label for="tipoMaquina" class="form-label">Tipo de Máquina:</label>
             <select class="form-select" id="tipoMaquina" name="tipoMaquina">
-                <option value="none" selected></option>
+                <option value="" selected></option>
                 <option value="motor">Motor</option>
                 <option value="circuito">Circuito</option>
                 <option value="bomba">Bomba</option>
