Conserto de erros

--- a/templates/insert_info_en.html
+++ b/templates/insert_info_en.html
@@ -134,7 +134,7 @@
         });
     </script>
 
-    <button type="submit" class="btn" onclick="window.location.href='respostas_en'">Get Detailed Information</button>
+    <button type="submit" class="btn" onclick="window.location.href='results_en'">Get Detailed Information</button>
 </div>
 </body>
 </html>
