--- a/templates/insert_info_pt.html
+++ b/templates/insert_info_pt.html
@@ -134,7 +134,7 @@
         });
     </script>
 
-    <button type="submit" class="btn" onclick="window.location.href='respostas_pt'">Receber Informações Detalhadas</button>
+    <button type="submit" class="btn" onclick="window.location.href='results_pt'">Receber Informações Detalhadas</button>
 </div>
 </body>
 </html>
