--- a/templates/results_en.html
+++ b/templates/results_en.html
@@ -15,7 +15,7 @@
 <div id="upperBoxRed"></div>
 <div id="upperBoxGrey"></div>
 <br>
-<button type="button" class="btn" onclick="window.location.href='inserir_info_en'">←</button>
+<button type="button" class="btn" onclick="window.location.href='insert_info_en'">←</button>
 
 <div class="container">
     <h4>Specification Sheet</h4>
